# talktype

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup_wizard.py  talktype.py  whisper_server.py
